[gd_scene load_steps=5 format=2]

[ext_resource path="res://icons/delete_white_48dp.svg" type="Texture" id=1]
[ext_resource path="res://icons/add_white_48dp.svg" type="Texture" id=2]
[ext_resource path="res://scripts/widgets/BudgetWidget/BudgetRow.gd" type="Script" id=3]
[ext_resource path="res://scripts/widgets/BudgetWidget/CategoryRow.tscn" type="PackedScene" id=4]

[node name="VBoxContainer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
category_row = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 720.0
margin_bottom = 54.0

[node name="AddCategory" type="Button" parent="HBoxContainer"]
margin_right = 60.0
margin_bottom = 54.0
icon = ExtResource( 2 )

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 64.0
margin_right = 656.0
margin_bottom = 54.0
size_flags_horizontal = 3

[node name="DeleteButton" type="Button" parent="HBoxContainer"]
margin_left = 660.0
margin_right = 720.0
margin_bottom = 54.0
icon = ExtResource( 1 )

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 58.0
margin_right = 720.0
margin_bottom = 61.0
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="HBoxContainer2"]
margin_right = 4.0
margin_bottom = 3.0

[node name="Categories" type="VBoxContainer" parent="HBoxContainer2"]
unique_name_in_owner = true
margin_left = 8.0
margin_right = 720.0
margin_bottom = 3.0
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 65.0
margin_right = 720.0
margin_bottom = 69.0

[connection signal="pressed" from="HBoxContainer/AddCategory" to="." method="_on_AddCategory_pressed"]
[connection signal="text_entered" from="HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="HBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
